# Maze-Kuhtov-Nikolay-M25-555

./: .gitignore  README.md  gamedemo.cast  goblindemo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
